<resources>
    <string name="app_name">integrator_android</string>
    <string name="tv_activity_suggestions_participants">Participants</string>
    <string name="tv_activity_suggestions_price">Price</string>
    <string name="tv_activity_suggestions_try_another">Try another</string>
    <string name="actRandom">Random</string>
    <string name="actEducation">Education</string>
    <string name="actRec">Recreational</string>
    <string name="actSocial">Social</string>
    <string name="actDIY">Do-It-Yourself</string>
    <string name="actCharity">Charity</string>
    <string name="actCooking">Cooking</string>
    <string name="actRelaxation">Relaxation</string>
    <string name="actMusic">Music</string>
    <string name="actBusywork">Busywork</string>
    <string name="titleActivities">Activities</string>
    <string name="term_and_cond">Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,
nullam ligula elementum duis tellus maecenas nec fermentum sed dictum
laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia
senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,
semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum
aenean et eget pretium volutpat eu dictum dictumst.
Praesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctor
ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus
mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla
ad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris
leo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra
quam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin
turpis viverra molestie cras quis.
Dignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu,
elementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdum
commodo montes convallis curae facilisis. Vitae diam phasellus litora ad aenean
himenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia
lacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat
interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis
egestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi
integer non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra
dis.
Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque
feugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra
donec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id
        conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices
vestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse
class facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci
faucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,
tempus purus et odio senectus sodales vulputate, ligula malesuada dis habitasse
nullam pellentesque.</string>
    <string name="not_bored">Not Bored</string>
    <string name="title_terms_and_cond">Terms and Conditions</string>
    <string name="text_participants">Participants</string>
    <string name="btn_term_and_cond">Terms and Conditions</string>
    <string name="btn_start">Start</string>
    <string name="chbx_terms_cond">I accept terms and conditions</string>
    <string name="please_check">Please accept terms and conditions</string>
    <string name="typeNone">random</string>
    <string name="typeEdu">education</string>
    <string name="typeRec">recreational</string>
    <string name="typeSocial">social</string>
    <string name="typeDIY">diy</string>
    <string name="typeCharity">charity</string>
    <string name="typeCooking">cooking</string>
    <string name="typeRelaxation">relaxation</string>
    <string name="typeMusic">music</string>
    <string name="typeBusywork">busywork</string>
    <string name="tv_activity_activities_choose_category">Choose a category</string>
    <string name="suggestionActTitle">We suggest you to…</string>
    <string name="please_insert">Insert 0 for random</string>
    <string name="link_terms_and_cond"><u>Terms and Conditions</u></string>
    <string name="errorNoActivity">Sorry, no such activity, try another category or amount of participants</string>
    <string name="loading">Loading…</string>


</resources>