<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".Views.MainActivity">


    <TextView
        android:id="@+id/textNotBored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_bored"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textNotBored"
        app:layout_constraintStart_toStartOf="@+id/textNotBored"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_participants"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:enabled="false"
            android:text="@string/btn_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextParticipants" />

        <EditText
            android:id="@+id/editTextParticipants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textSize="25sp"
            android:background="@drawable/backgound_radius_corner"
            android:ems="10"
            android:hint="@string/please_insert"
            android:inputType="number"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textParticipants" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textLinkTermsAndCond"
        android:layout_width="168dp"
        android:layout_height="28dp"
        android:clickable="true"
        android:text="@string/link_terms_and_cond"
        android:textColor="#1968DD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>