<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.TyCActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        tools:ignore="MissingConstraints"
        tools:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textTitleTermsAndCond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_terms_and_cond"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:background="@null"
                android:src="@drawable/ic_baseline_close_24"
                tools:ignore="OnClick" />
        </LinearLayout>

    </Toolbar>

    <TextView
        android:id="@+id/textNotBored"
        android:layout_width="157dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:text="@string/not_bored"
        android:textColor="#1968DD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollViewTermAndCond"
        android:layout_width="331dp"
        android:layout_height="488dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNotBored"
        app:layout_constraintVertical_bias="0.238">

        <TextView
            android:id="@+id/textTermsAndCond"
            android:layout_width="271dp"
            android:layout_height="475dp"
            android:layout_weight="1.0"
            android:text="@string/term_and_cond" />


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>