<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.SuggestionsActivity">

    <TextView
        android:id="@+id/activityTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Learn how to play a new sport" />

    <ImageView
        android:id="@+id/participantsIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/activityTV"
        app:layout_constraintTop_toBottomOf="@+id/activityTV"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/participantsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/participantsIV"
        app:layout_constraintStart_toEndOf="@+id/participantsIV"
        app:layout_constraintTop_toTopOf="@+id/participantsIV"
        android:text="@string/tv_activity_suggestions_participants" />

    <TextView
        android:id="@+id/amountParticipantsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/participantsIV"
        app:layout_constraintEnd_toEndOf="@+id/activityTV"
        app:layout_constraintTop_toTopOf="@+id/participantsIV"
        tools:text="2" />

    <ImageView
        android:id="@+id/priceIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/participantsIV"
        app:layout_constraintTop_toBottomOf="@+id/participantsIV"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/priceIV"
        app:layout_constraintStart_toEndOf="@+id/priceIV"
        app:layout_constraintTop_toTopOf="@+id/priceIV"
        android:text="@string/tv_activity_suggestions_price" />

    <TextView
        android:id="@+id/priceLevelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/priceIV"
        app:layout_constraintEnd_toEndOf="@+id/activityTV"
        app:layout_constraintTop_toTopOf="@+id/priceIV"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Medium" />

    <ImageView
        android:id="@+id/categoryIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/priceIV"
        app:layout_constraintTop_toBottomOf="@+id/priceIV"
        app:srcCompat="@drawable/ic_baseline_format_list_bulleted_24" />

    <TextView
        android:id="@+id/categoryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/categoryIV"
        app:layout_constraintStart_toEndOf="@+id/categoryIV"
        app:layout_constraintTop_toTopOf="@+id/categoryIV"
        tools:text="Relaxation" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_activity_suggestions_try_another"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>